--- a/css/style.css
+++ b/css/style.css
@@ -489,11 +489,31 @@ a.active {
 }
 
 .portfolio_item {
-    position: relative;
+    position:relative;
     overflow: hidden;
     display: block;
-    margin-bottom: 30px;
+    /* padding-right: 2%; */
+    width: 100%;
+    height: 300px;
+    /* float: left; */
+    margin-bottom: 15px;
+    /* margin: 0 10px 30px 10px; */
+    /* margin-right: 5px; */
+    /* margin-inline: 20px; */
 }
+
+.portfolio_container {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+/* Ensure no extra margin/padding from Bootstrap grid system */
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
 
 .portfolio_item .portfolio_item_hover {
     position: absolute;
@@ -763,6 +783,12 @@ fieldset {
 @media (max-width: 991px) {
     .portfolio .categories-grid .categories ul li a {
         padding: 0 2px;
+    }
+}
+
+@media (min-width: 768px) {
+    .col-md-6 {
+        margin-bottom: 15px; /* Adjusted bottom margin for medium screens and up */
     }
 }
 
